--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,7 +32,9 @@
     "src/**/*.tsx",
     "src/**/*.vue",
     "tests/**/*.ts",
-    "tests/**/*.tsx"
+    "tests/**/*.tsx",
+    "./images.d.ts",
+    "./audio.d.ts"
   ],
   "exclude": [
     "node_modules"
